--- a/style.css
+++ b/style.css
@@ -9,47 +9,71 @@ body {
   padding: 0;
 }
 
+h1,
+H2,
+H3 {
+  margin: 0;
+}
+
+html {
+  font-size: 1.125rem;
+}
+
 .max-width-wrapper {
-  min-width: 100px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 750px;
+  margin: 0 auto;
+  padding: 0 24px;
 }
 
-strong {
-  color: hsl(160deg, 100%, 30%);
+.intro-chunk {
+  padding: 96px 0 48px;
+  max-width: 400px;
 }
 
-header {
-  padding-top: 80px;
-  padding-bottom: 80px;
+.intro-chunk p {
+  font-size: 1.25rem;
+  line-height: 1.4;
+}
 
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 300px;
-  height: fit-content;
+.intro-chunk .title {
+  font-size: 2rem;
+  margin-bottom: 48px;
 }
 
 main {
-  height: fit-content;
-  padding-top: 80px;
-  padding-bottom: 80px;
   background-color: hsl(0deg, 0%, 60%);
+  padding: 96px 0;
 }
 
 .card {
-  padding: 24px;
   background-color: white;
-  max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 24px;
+  margin: -24px;
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
 }
 
 .indented-heading {
   background-color: hsl(45deg, 100%, 50%);
-  padding: 24px;
-  margin-top: -18px;
-  margin-left: -40px;
-  border-bottom: 6px solid hsl(45deg, 100%, 40%);
-  text-align: center;
-  width: 400px;
+  margin-left: -32px;
+  margin-top: -16px;
+  padding: 16px 32px;
+  width: fit-content;
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+}
+
+.card p:last-child {
+  padding-bottom: 0;
+}
+
+header {
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
+}
+
+.card p {
+  font-size: 1.25rem;
+  line-height: 1.4;
+}
+
+.intro-chunk strong {
+  color: hsl(160deg, 100%, 30%);
 }
